@@ -1,4 +1,4 @@
 DIST php-openid-2.1.3.tar.bz2 315437 RMD160 d0b73619dcf498d6444a194f00a08c5a9c612c0c SHA1 63c1d558f19e0a3860b0776dc47e50dae5df66f6 SHA256 68f169b87710f98445361c2ea700cc77dda7016acf696ff2a0dae7aeb72b9c92
-EBUILD php-openid-2.1.3.ebuild 759 RMD160 6c9b4a85c6dd00b4da7455bb923bd71f553c0382 SHA1 55a83287c6a7fde1b7f4164f6cdf1266d4ee07f9 SHA256 3bc35d9d1853a27dd090d64cbcab95c4c62b44a525721e1303b1c553e182578f
-MISC ChangeLog 428 RMD160 29261089a8475b6b884c5c8952f7ede07e52b418 SHA1 be128c0af9fa069ff3a9323b8d1b7f7ad3cb22e2 SHA256 7e050605798805caeec63c6ea97914cc3735678eeee341e57c948377073fd6a3
+EBUILD php-openid-2.1.3.ebuild 762 RMD160 6761719977c8c0a68f93677190a870064ffd0079 SHA1 07249d09075d817c75145e9dbbd939e70d763aec SHA256 6a870b3c1eff2725094eb1ed3341ec7570c6f0902f083ceaffd00e4d113e1e5f
+MISC ChangeLog 543 RMD160 95f3924e8d184d1a7ee238422d2b42c5c9e2b760 SHA1 3d50ec5975c7244eb200f0cc20427eb274785ed8 SHA256 9bf532b452f8bf2b3de7f34976541b391d2afa076538562ddaa474d217c2bc5f
 MISC metadata.xml 158 RMD160 4378c9420c146cb2b050d5c08c690b96abc48a09 SHA1 80fc6e1f941830dd74ec4f291b3a478be65c234f SHA256 ccc83c51cfb6c2d3b314fa52bc81f11f876ddc50ce2b536301ccd4dce4646f84
