@@ -1,6 +1,6 @@
 # Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-php/cvs-repo/gentoo-x86/dev-php/php-openid/Attic/php-openid-2.1.3.ebuild,v 1.1 2010/01/01 21:38:07 yngwin Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-php/cvs-repo/gentoo-x86/dev-php/php-openid/Attic/php-openid-2.1.3.ebuild,v 1.2 2010/01/02 23:26:59 yngwin Exp $
 
 EAPI="2"
 inherit php-lib-r1
@@ -16,8 +16,8 @@ KEYWORDS="~amd64 ~x86"
 IUSE="examples"
 
 DEPEND=""
-RDEPEND="|| ( virtual/php[bcmath] virtual/php[gmp] )
-	virtual/php[curl]"
+RDEPEND="|| ( dev-lang/php[bcmath] dev-lang/php[gmp] )
+	dev-lang/php[curl]"
 
 src_install() {
 	cd "${S}"/Auth
